# libnexus-rv

./: .gitmodules  CMakeLists.txt  README.md
contrib/p550/: README.md  gencmd-sync-on-addr.sh  openocd.cfg  sync-on-task-switch.sh  test-stack-depth.cpp  trace-sync-on-addr.sh  trace-sync-on-task-switch.sh
contrib/p550/kernel-patches/: 0001-riscv-enable-ARCH_PROC_KCORE_TEXT.patch  0001-riscv-entry-Use-equivalent-instructions-for-better-t.patch
contrib/p550/rvtrigger/: Makefile  rvtrace-trigger.c
docs/: annotated.html  classes.html  dir_44c350b5b0baea08916c56ae92d8c394.html  dir_cd2e8cd127ba1f82cd00315a0f3636c1.html  dir_d44c64559bbebec7f509842c48db8b23.html  error_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  hist-array_8h.html  hist-array_8h__dep__incl.map  hist-array_8h__dep__incl.md5  hist-array_8h__incl.map  hist-array_8h__incl.md5  hist-array_8h_source.html  index.html  inst-helper_8h_source.html  menudata.js  msg-decoder_8h.html  msg-decoder_8h__dep__incl.map  msg-decoder_8h__dep__incl.md5  msg-decoder_8h__incl.map  msg-decoder_8h__incl.md5  msg-decoder_8h_source.html  msg-encoder_8h.html  msg-encoder_8h__incl.map  msg-encoder_8h__incl.md5  msg-encoder_8h_source.html  msg-types_8h.html  msg-types_8h__dep__incl.map  msg-types_8h__dep__incl.md5  msg-types_8h__incl.map  msg-types_8h__incl.md5  msg-types_8h_source.html  (+32 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  (+5 more)
hack/: build-capstone  build-libnexus-rv  cmd.bash  common.bash
include/libnexus-rv/: decoder.h  encoder.h  error.h  hist-array.h  inst-helper.h  msg-decoder.h  msg-encoder.h  msg-types.h  return-stack.h  trace-decoder.h
include/libnexus-rv/internal/: protocol.h
lib/: CMakeLists.txt  decoder.c  encoder.c  format.h  hist-array.cpp  misc.c  misc.h  msg-decoder.c  msg-encoder.c  msg-format.h  msg-printer.c  msg-reader.c  printer.c  reader.c  trace-decoder.c
util/: CMakeLists.txt  assemble.c  dump.c  inst.cpp  inst.h  linux.cpp  linux.h  logger.cpp  logger.h  misc.c  misc.h  objfile.cpp  objfile.h  opts-def.h  patch.c  print.c  print.h  replay.c  replay.cpp  split.c  sym.cpp  sym.h  vm.cpp  vm.h
